<?xml version="1.0"?>
<package format="2">
  <name>panther_description</name>
  <version>0.3.0</version>
  <description>
    This package provides urdf file and meshes for simulation and rviz
  </description>

  <maintainer email="matiaudasa@ornl.gov">Sebastian Matiauda</maintainer>
  <author email="boydda@ornl.gov">Daniel Boyd</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rgazebo_ros</exec_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>

 

</package>
