<?xml version="1.0"?>
<package format="2">
  <name>panther_gazebo</name>
  <version>0.3.0</version>
  <description>
    This package provides gazebo files for simulation
  </description>

  <maintainer email="matiaudasa@ornl.gov">Sebastian Matiauda</maintainer>
  <author email="boydda@ornl.gov">Daniel Boyd</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rgazebo_ros</exec_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
 

</package>
