<?xml version="1.0"?>
<package format="2">
  <name>panther_gazebo</name>
  <version>0.3.0</version>
  <description>
    This package provides gazebo files for simulation
  </description>

  <maintainer email="matiaudasa@ornl.gov">Sebastian Matiauda</maintainer>
  <author email="boydda@ornl.gov">Daniel Boyd</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rgazebo_ros</exec_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
 

</package>
