<?xml version="1.0"?>
<package format="2">
  <name>panther_navigation</name>
  <version>0.3.0</version>
  <description>
    This package provides the PantherRover navigation by following the LeoRover navigation package.
  </description>

  <maintainer email="belteshazzarboyd@gmail.com">Daniel Boyd</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>

</package>
