<?xml version="1.0"?>
<package format="2">
  <name>sdr_launch</name>
  <version>0.0.0</version>
  <description>Launches all packages</description>
  
  <author email="ben@sdrobots.com">Ben Polk</author>
  <maintainer email="ben@sdrobots.com">Ben Polk</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
